# Qwen-TTS

./: .env.training example  .env.training.example  .env.websocket.example  .gitignore  BUILD_SYSTEM_FIX.md  COMPARISON.md  COMPLETE_SETUP_GUIDE.md  CUDA_SETUP.md  DEPENDENCIES_FIX.md  HAUSA_SFT_TRAINING.md  HAUSA_TRAINING.md  IMPORT_FIX.md  PYTHON_VERSION_FIX.md  README.md  SETUP_FIXES.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  UV_SETUP_SUMMARY.md  UV_START.md  VERSION_COMPATIBILITY_FIX.md  dataset_tool.py  example_hausa_training.py  example_usage.py  instructions.md  load_custom_checkpoint.py  prepare_hausa_data.py  pyproject.toml  quick_start.py  qwen_tts_server.py  resample_audio.py  setup.sh  setup_env.py  test_qwen_websocket.py  test_setup.py  train_hausa_sft.py  train_using_sft.py  train_wandb_validation.py
Qwen3-TTS/: .env.example  .env.training.example  .gitignore  COMPLETE_TRAINING_ANALYSIS.md  README.md  data_processing.py  dataset_tool.py  dataset_tool_jsonl copy.py  dataset_tool_jsonl.py  load_from_huggingface.py  pyproject.toml  test_setup.py  train.py  train_from_hf.py  train_using_sft_jsonl.py  train_wandb_validation.py  uv_train.sh  uv_train_4gpu.sh
Qwen3-TTS/data/: hausa-mtn-test.csv  validation_backup.jsonl
Qwen3-TTS/examples/: test_model_12hz_base.py  test_model_12hz_custom_voice.py  test_model_12hz_voice_design.py
Qwen3-TTS/finetuning/: README.md  background_preprocessor.py  clear_caches.py  data_preparation.py  data_processing.py  dataset.py  dual_loss_trainer.py  finetune.py  hausa_dataset.py  layer_utils.py  plot_logs.py  quality_metrics.py  sft_12hz.py  train_hausa.py  training_utils.py  upload_to_hf.py
Qwen3-TTS/finetuning/test/: test_dual_loss.py  test_streaming.py
Qwen3-TTS/qwen_tts/core/models/: fix_dtype.py  modeling_qwen3_tts.py
Qwen3-TTS/qwen_tts/core/tokenizer_12hz/: configuration_qwen3_tts_tokenizer_v2.py  modeling_qwen3_tts_tokenizer_v2.py
Qwen3-TTS/qwen_tts/core/tokenizer_25hz/: configuration_qwen3_tts_tokenizer_v1.py
