[project]
name = "qwen3-tts"
version = "0.1.0"
description = "Qwen3-TTS WebSocket server"
readme = "README.md"
requires-python = ">=3.10,<3.13"

[dependencies]
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
websockets = ">=12.0"
python-dotenv = ">=1.0.0"
numpy = ">=1.24.0"

[build-system]
requires = ["setuptools>=70.0.0", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["Qwen3-TTS"]
include = ["qwen_tts*"]
exclude = ["tests*", "examples*"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
