[build-system]
requires = ["setuptools>=70.0.0", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts"
version = "0.1.1"
description = "Qwen3-TTS - Shared dependencies for all use cases"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "websockets>=12.0",
  "librosa>=0.10.0",
  "scipy>=1.11.0",
  "numpy>=1.24.0",
  "torch>=2.5.0",
  "torchaudio>=2.5.0",
  "soundfile>=0.12.0",
  "huggingface-hub>=0.19.0",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "einops>=0.6.0",
  "sox>=1.4.1",
  "onnxruntime>=1.16.0",
  "datasets>=2.14.0",
  "torchcodec>=0.10.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
qwen-tts-demo = "qwen_tts.cli.demo:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

flash-attn = [
  "flash-attn>=2.6.0",
]

training = [
  "tqdm>=4.66.0",
]